r2e-compile-tests/cases/modules/fail/module_private_bean_not_visible.stderr
error[E0277]: type `Secret` was not provided to the AppBuilder
  --> cases/modules/fail/module_private_bean_not_visible.rs:58:36
   |
58 |             .register_controller::<SpyController>()
   |                                    ^^^^^^^^^^^^^ missing `.provide::<Secret>()` or `.register::<Secret>()`
   |
   = help: the trait `Contains<Secret, _>` is not implemented for `HNil`
   = note: every dependency must be provided or registered as a bean before calling `build_state()`
help: the following other types implement trait `Contains<H, Idx>`
  --> $WORKSPACE/r2e-core/src/type_list.rs
   |
   | impl<H, T> Contains<H, Here> for TCons<H, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TCons<H, T>` implements `Contains<H, Here>`
...
   | impl<H, X, T, I> Contains<H, There<I>> for TCons<X, T> where T: Contains<H, I> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TCons<X, T>` implements `Contains<H, There<I>>`
...
   | impl<H, T> Contains<H, Here> for HCons<H, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<H, T>` implements `Contains<H, Here>`
   | impl<H, X, T, I> Contains<H, There<I>> for HCons<X, T> where T: Contains<H, I> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<X, T>` implements `Contains<H, There<I>>`
   = note: required for `HCons<Api, HNil>` to implement `Contains<Secret, There<_>>`
   = note: required for `TCons<Secret, TNil>` to implement `AllSatisfied<HCons<Api, HNil>, (There<_>, ())>`
note: required by a bound in `register_controller`
  --> $WORKSPACE/r2e-core/src/builder/registration.rs
   |
   |     fn register_controller<C>(self) -> Self
   |        ------------------- required by a bound in this associated function
...
   |         C::Deps: AllSatisfied<T, DepIdx>;
   |                  ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RegisterController::register_controller`
